syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

package sensu.types;

option go_package = "types";
option (gogoproto.populate_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.testgen_all) = true;

// A Metrics is an event metrics payload specification.
message ObjectMeta {
    // Name must be unique within a namespace. Name is primarily intended for creation
	// idempotence and configuration definition.
    string name = 1 [(gogoproto.jsontag) = "name"];

    // Namespace defines a logical grouping of objects within which each object name must
    // be unique. 
    string namespace = 2 [(gogoproto.jsontag) = "namespace"];

    // Map of string keys and values that can be used to organize and categorize
    // (scope and select) objects. May also be used in filters and token 
    // substitution.
    // TODO: Link to Sensu documentation.
    // More info: http://kubernetes.io/docs/user-guide/labels
    map<string, string> labels = 3 [(gogoproto.jsontag) = "labels"];

    // Annotations is an unstructured key value map stored with a resource that may be
    // set by external tools to store and retrieve arbitrary metadata. They are not
    // queryable and should be preserved when modifying objects.
    // TODO: Link to Sensu documentation.
    // More info: http://kubernetes.io/docs/user-guide/annotations
    map<string, string> annotations = 4 [(gogoproto.jsontag) = "annotations"];
}
